# robot_stalker

camera_motor/: CMakeLists.txt  package.xml  setup.py
camera_motor/scripts/: listener.py
camera_motor/src/camera_motor/: maestro.py
test_robot_config/: CMakeLists.txt  package.xml  setup.py
test_robot_config/config/: control.yaml
test_robot_config/launch/: for_maksim.launch  single_robot.launch  test_robot_gazebo.launch  two_robots.launch
test_robot_config/rviz/: test_robot.rviz
test_robot_config/scripts/: detect_the_marker.py  dist_modifier.py  estimate_dest.py  fsm_description.py  marker_moves.py  move_to_point.py  reach_the_point.py  reach_the_point_not_that_old.py  reach_the_point_old.py  reach_the_point_very_old.py  tracker.py  wheels_and_eye.py
test_robot_description/: CMakeLists.txt  package.xml
test_robot_description/launch/: test_urdf.launch
test_robot_description/rviz/: test_robot.rviz
test_robot_description/urdf/: test_robot.urdf.xacro
